nuke_from_orbit/nuke_from_orbit/kubernetes-config/locust-worker-controller.yaml
---
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: lw-pod
  labels:
    name: lw-pod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lw-pod
  template:
    metadata:
      labels:
        app: lw-pod
    spec:
      containers:
        - name: lw-prod
          image: gcr.io/jcp-loadtest-sandbox/external-test:v1
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
